--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
       <title>Prototype.</title>
     </head>
     <body>
-      <p>I'm just testing this shizz. Welcome to GitHub frickerfrackers. :33</p>
+      <p>we should get started</p>
     </body>
 </html>
