Prototyped home page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Prototype.</title>
+        <title>Home</title>
+	    <!-- Latest compiled and minified CSS -->
+	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+        <!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     </head>
     <body>
-      <p>we should get started</p>
+		<div class="container">
+			<div class="row">
+			<div class="col-xs-12">
+				<ul class="nav nav-tabs" role="tablist">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="about.html">About the Website</a></li>
+					<li><a href="#">Maps</a></li>
+					<li><a href="mall.html">Malls</a></li>
+					<li><a href="#">HOHOL spots</a></li>
+					<li><a href="#">Restaurants</a></li>
+					<li><a href="#">Log-in!</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 center-block">
+				<h1 style="text-align: center;">big-ass title</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-4">
+				<h1>What's popular now?</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-4">
+				<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+				<a href="#">Keep reading...</a>
+			</div>
+			<div class="col-xs-4">
+				<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+				<a href="#">Keep reading...</a>
+			</div>
+			<div class="col-xs-4">
+				<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+				<a href="#">Keep reading...</a>
+			</div>
+		</div>
     </body>
 </html>
