--- a/mall.html
+++ b/mall.html
@@ -18,7 +18,7 @@
 	<div class="row">
 	
 	<ul class="nav nav-tabs" role="tablist">
-	<li><a href="#">Home</a></li>
+	<li><a href="index.html">Home</a></li>
 	<li><a href="#">About the Website</a></li>
 	<li><a href="#">Maps</a></li>
 	<li class="active"><a href="#">Malls</a></li>
