Created login.html, a bunch of other changes :33

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs" role="tablist">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="about.html">About the Website</a></li>
+					<li><a href="#">About the Website</a></li>
 					<li><a href="#">Maps</a></li>
 					<li><a href="mall.html">Malls</a></li>
 					<li><a href="#">HOHOL spots</a></li>
 					<li><a href="#">Restaurants</a></li>
-					<li><a href="#">Log-in!</a></li>
+					<li><a href="login.html">Log-in!</a></li>
 				</ul>
 			</div>
 		</div>
