--- a/mall.html
+++ b/mall.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
 <head>
-<title>Prototype</title>
+<title>Malls</title>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -24,17 +24,17 @@
 	<li class="active"><a href="#">Malls</a></li>
 	<li><a href="#">HOHOL spots</a></li>
 	<li><a href="#">Restaurants</a></li>
-	<li><a href="#">Log-in!</a></li>
+	<li><a href="login.html">Log-in!</a></li>
 	</ul>
 	
 	<h1 style="text-align: center;">Malls</h1>
 	<div class="col-md-6 col-xs-12"> <h1>Trinoma</h1><p> This is a cool mall near PISAY so go here cause its cool yay super grabe ang astig. 
-	if you live near Quezon City or the QC circle. go here yay. </p> <a href"trinoma.html"> see more </a>
+	if you live near Quezon City or the QC circle. go here yay. </p> <a href="trinoma.html">See more...</a>
 	</div>
 	<div class="col-md-6 col-xs-12"> <h1>SM North EDSA</h1> <p>this is a cool mall too go here blah blah yay astig tho minsan lang ako pumunta here and other stuff 
-	about the mall (intro)</p> <a href"SMNEDSA.html"> see more </a> </div>
+	about the mall (intro)</p> <a href="SMNEDSA.html">See more...</a> </div>
 	<div class="col-md-6 col-xs-12"> <h1> SM Marikina</h1> <p> i donut know what i will put here </p> <a href"SM.html"> see more </a> </div>
-	<div class="col-md-6 col-xs-12"> <h1> Another mall</h1> <p> intro stuff </p> <a href="other.html"> see more </a>
+	<div class="col-md-6 col-xs-12"> <h1> Another mall</h1> <p> intro stuff </p> <a href="other.html">See more...</a>
 	
 	
 	</div>
