--- a/login.html
+++ b/login.html
@@ -13,7 +13,38 @@
 <body>
 	<div class="container">
 		<div class="row">
-		
+		<div class="col-xs-12">
+			<ul class="nav nav-tabs" role="tablist">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="#">About the Website</a></li>
+				<li><a href="#">Maps</a></li>
+				<li><a href="mall.html">Malls</a></li>
+				<li><a href="#">HOHOL spots</a></li>
+				<li><a href="#">Restaurants</a></li>
+				<li class="active"><a href="#">Log-in!</a></li>
+			</ul>
+		</div>
+		</div>
+		<div class="row">
+			<form role="form">
+				<div class="form-group">
+					<label for="inputUsername">Username</label>
+					<input type="email" class="form-control" id="inputUsername" placeholder="Username">
+				</div>
+				<div class="form-group">
+					<label for="exampleInputPassword1">Password</label>
+					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+				</div>
+				<div class="checkbox">
+					<label>
+						<input type="checkbox">Remember me
+					</label>
+				</div>
+				<button type="submit" class="btn btn-primary btn-block">Sign-in</button>
+			</form>
+		</div>
+		<div class="row">
+			<button class="btn btn-default btn-block">No account? Sign up!</button>
 		</div>
 	</div>
 </body>
