--- a/index.html
+++ b/index.html
@@ -38,16 +38,29 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-4">
-				<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+				<h3>Trinoma</h3>
+				<p>This is a cool mall near PISAY so go here cause its cool...</p>
 				<a href="#">Keep reading...</a>
 			</div>
 			<div class="col-xs-4">
-				<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+				<h3>SM North EDSA</h3>
+				<p>This is a cool mall too go here...</p>
 				<a href="#">Keep reading...</a>
 			</div>
 			<div class="col-xs-4">
-				<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+				<h3>SM Marikina</h3>
+				<p>It's also fun. Lots of cool stuff here...</p>
 				<a href="#">Keep reading...</a>
+			</div>
+		</div>
+		<div class="row" style="margin-top: 30px;">
+			<div class="col-xs-4" style="border: 1px solid black; border-radius: 7%;">
+				<h4>Navigations</h4>
+				<ul>
+					<li><a href="#">Forums</a></li>
+					<li><a href="#">Custom Places</a></li>
+					<li><a href="#">Random Page :33</a></li>
+				</ul>
 			</div>
 		</div>
     </body>
