--- a/login.html
+++ b/login.html
@@ -25,7 +25,9 @@
 			</ul>
 		</div>
 		</div>
-		<div class="row">
+		<div class="row" style="margin-top: 20px;">
+			<div class="col-xs-4"></div>
+			<div class="col-xs-4">
 			<form role="form">
 				<div class="form-group">
 					<label for="inputUsername">Username</label>
@@ -42,9 +44,13 @@
 				</div>
 				<button type="submit" class="btn btn-primary btn-block">Sign-in</button>
 			</form>
+			</div>
+			<div class="col-xs-4"></div>
 		</div>
-		<div class="row">
-			<button class="btn btn-default btn-block">No account? Sign up!</button>
+		<div class="row" style="margin-top: 20px;">
+			<div class="col-xs-4"></div>
+			<div class="col-xs-4"><button class="btn btn-default btn-block">No account? Sign up!</button></div>
+			<div class="col-xs-4"></div>
 		</div>
 	</div>
 </body>
