--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs" role="tablist">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">About the Website</a></li>
-					<li><a href="#">Maps</a></li>
+					<li><a href="about.html">About the Website</a></li>
+					<li><a href="maps.html">Maps</a></li>
 					<li><a href="mall.html">Malls</a></li>
-					<li><a href="#">HOHOL spots</a></li>
-					<li><a href="#">Restaurants</a></li>
+					<li><a href="hohol.html">HOHOL spots</a></li>
+					<li><a href="reastuarants.html">Restaurants</a></li>
 					<li><a href="login.html">Log-in!</a></li>
 				</ul>
 			</div>
