A whole fuckton of changes

--- a/mall.html
+++ b/mall.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
 <head>
-<title>Malls</title>
+<title>Prototype</title>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -17,6 +17,7 @@
 	<div class="container">
 	<div class="row">
 	
+	<div class="col-xs-12">
 	<ul class="nav nav-tabs" role="tablist">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html">About the Website</a></li>
@@ -26,15 +27,20 @@
 	<li><a href="restaurants.html">Restaurants</a></li>
 	<li><a href="login.html">Log-in!</a></li>
 	</ul>
-	
-	<h1 style="text-align: center;">Malls</h1>
-	<div class="col-md-6 col-xs-12"> <h1>Trinoma</h1><p>This is a cool mall near PISAY so go here cause its cool yay super grabe ang astig. 
-	if you live near Quezon City or the QC circle. go here yay.</p> <a href="trinoma.html">See more...</a>
 	</div>
-	<div class="col-md-6 col-xs-12"> <h1>SM North EDSA</h1> <p>This is a cool mall too go here blah blah yay astig tho minsan lang ako pumunta here and other stuff 
-	about the mall (intro)</p> <a href="SMNEDSA.html">See more...</a> </div>
-	<div class="col-md-6 col-xs-12"> <h1> SM Marikina</h1> <p>It's also fun. Lots of cool stuff here.</p> <a href"SM.html"> see more </a> </div>
-	<div class="col-md-6 col-xs-12"> <h1> Another mall</h1> <p> intro stuff </p> <a href="other.html">See more...</a>
+	
+	
+	<h1 style="text-align: center;"> Malls</h1>
+	<div class="col-md-6 col-xs-12"> <img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Trinoma_Logo.gif/240px-Trinoma_Logo.gif"> <p> This is a cool mall near PISAY so go here cause its cool yay super grabe ang astig. if you live near Quezon City or the QC circle. go here yay. </p> <a href="trinoma.html"> see more </a> </div>
+	
+	<div class="col-md-6 col-xs-12"> <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRP_WFv0qBil_zIZTbKigLNSK-TMpVbVusunopujpvDVbufBtUM"> <p> inrot intwh fjw finaldv eogmlvn </p> <a href="northedsa.html"> see more </a> </div>
+	
+	<div class="col-md-6 col-xs-12"> <img src="http://4.bp.blogspot.com/-BSuYN1yfAt0/Te7s7oXLjZI/AAAAAAAAAxU/E_lvsS0Od0o/s1600/market_logo.jpg"> <p> furngwvnegj iejw e9r ntor intor itnr intro blah blah </p> <a href="market2.html"> see more </a> </div>
+	
+	<div class="col-md-6 col-xs-12"> <img src="http://upload.wikimedia.org/wikipedia/en/1/14/Glorietta_2007_Logo.jpg"> <p> intoordfnsnviiej igwva jp pejfwpf </p> <a href="glorieta.html"> see more </a> </div>
+	
+	
+	
 	
 	
 	</div>
