--- a/trinoma.html
+++ b/trinoma.html
@@ -12,22 +12,29 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 <body>
-	<ul class="nav nav-tabs" role="tablist">
-		<li><a href="#">Home</a></li>
-		<li><a href="#">About the Website</a></li>
-		<li><a href="#">Maps</a></li>
-		<li class="active"><a href="#">Malls</a></li>
-		<li><a href="#">HOHOL Spots</a></li>
-		<li><a href="#">Restaurants</a></li>
-		<li><a href="#">Log-in!</a></li>
-	</ul>
-	
 	<div class="container">
 	<div class="row">
-		<div class="col-md-6 text-center"><h2>Trinoma</h2></br>
-		big picture dapat dito
+		<div class="col-xs-12">
+		<ul class="nav nav-tabs" role="tablist">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About the Website</a></li>
+			<li><a href="maps.html">Maps</a></li>
+			<li class="active"><a href="mall.html">Malls</a></li>
+			<li><a href="hohol.html">HOHOL Spots</a></li>
+			<li><a href="restaurants.html">Restaurants</a></li>
+			<li><a href="login.html">Log-in!</a></li>
+		</ul>
 		</div>
-		<div class="col-md-6 text-center">logo dapat dito
+		</div>
+	
+	<div class="row">
+		<div class="col-md-6 text-center offset-col-md-6"><h2>Trinoma</h2></br>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6 text-center"><img src="http://2.bp.blogspot.com/-M0z1mtgWPpI/TbRW5aj0SvI/AAAAAAAAAEg/ZXEeiSqa594/s1600/Trinoma.jpg" class="img-rounded" style="width:400; length:700;">
+		</div>
+		<div class="col-md-6 text-center"><img src="http://upload.wikimedia.org/wikipedia/en/0/0c/Trinoma_Logo.gif" style="width:400; length:700;">
 		</div>
 	</div>
 	</div>
