--- a/critic.html
+++ b/critic.html
@@ -35,22 +35,22 @@
   		</button>
  	 		<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 				<li class="dropdown-header">Malls</li>
-    				<li><a href="#">Mall 1</a></li>
-    				<li><a href="#">Mall 2</a></li>
-    				<li><a href="#">Mall 3</a></li>
+    				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Mall 1</a></li>
+    				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Mall 2</a></li>
+    				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Mall 3</a></li>
     				<li class="divider"></li>
 				<li class="dropdown-header">HOHOL Spots</li>
-    				<li><a href="#">Hohol 1</a></li>
-    				<li><a href="#">Hohol 2</a></li>
-    				<li><a href="#">Hohol 3</a></li>
+    				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Hohol 1</a></li>
+    				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Hohol 2</a></li>
+    				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Hohol 3</a></li>
     				<li class="divider"></li>
 				<li class="dropdown-header">Restaurants</li>
-    				<li><a href="#">Resto 1</a></li>
-    				<li><a href="#">Resto 2</a></li>
-    				<li><a href="#">Resto 3</a></li>
+    				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Resto 1</a></li>
+    				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Resto 2</a></li>
+    				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Resto 3</a></li>
   			</ul>
 		</div>
-		</div>
+	</div>
 
 	<div class="row">
 		<div class="col-md-12 text-center"><h2>Comments</h2><h4>Trinoma</h4></br>
