--- a/mall.html
+++ b/mall.html
@@ -13,11 +13,22 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
 
+<style>
+	img{
+	height: 60px;
+	width: 160px;
+	}
+	body{
+	background-image: url(Ocean-Park-retail-theme-park-aquarium-illustration-architectural-renderer-delineator-shopping-mall.jpg);
+	}
+	div{
+	background-color: rgba(255, 255, 255, 0.4);
+	}
+</style>
 <body>
 	<div class="container">
 	<div class="row">
 	
-	<div class="col-xs-12">
 	<ul class="nav nav-tabs" role="tablist">
 	<li><a href="index.html">Home</a></li>
 	<li><a href="about.html">About the Website</a></li>
@@ -27,20 +38,46 @@
 	<li><a href="restaurants.html">Restaurants</a></li>
 	<li><a href="login.html">Log-in!</a></li>
 	</ul>
+	
+	<h1 style="text-align: center;">Malls</h1>
+	<div class="col-md-5 col-xs-12 text-align: center"> 
+		<img src="http://upload.wikimedia.org/wikipedia/en/thumb/2/27/Robinsons_Place_Manila_new_Logo.jpg/250px-Robinsons_Place_Manila_new_Logo.jpg">
+		<p> The only Manila mall in this list is Robinsons Place Manila, situated at the heart of the city in the Malate-Ermita border. A favorite hangout among students, professionals, and foreign tourists, Rob Manila, or RP, caters to all its patrons by providing them with everything they need, be it expensive or affordable. And despite its continuous expansion, RP maintained organization by sectioning the stalls into different wings and atria, giving the shopper an easy experience. You will definitely love to explore this mall right here so go here now!</p>
+		<a href"robinsonsmanila.html"> see more </a>
 	</div>
 	
+	<div class="col-md-5 col-md-offset-2 col-xs-12 text-align: center"> 
+		<img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRP_WFv0qBil_zIZTbKigLNSK-TMpVbVusunopujpvDVbufBtUM"> 
+		<p>Now, SM North is one of the most visited and most densely populated malls in the country. The four-level shopping bazaar houses more than 500 retail shops, service stores, restaurants, and twelve movie houses. Time and again, SM North has expanded its operations having added Cyberzone, Hypermart, and The Block to its offerings. But the expansion doesn't end there: annexes that will feature the second IMAX movie theater in the country and the Sky Garden are currently being constructed. These additional attractions are scheduled to open in 2008. </p>
+		<a href="smnorthedsa.html"> see more </a>	
+	</div>
 	
-	<h1 style="text-align: center;"> Malls</h1>
-	<div class="col-md-6 col-xs-12"> <img src="http://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Trinoma_Logo.gif/240px-Trinoma_Logo.gif"> <p> This is a cool mall near PISAY so go here cause its cool yay super grabe ang astig. if you live near Quezon City or the QC circle. go here yay. </p> <a href="trinoma.html"> see more </a> </div>
+	<div class="col-md-5 col-xs-12 text-align: center"> 
+		<img src="http://upload.wikimedia.org/wikipedia/en/thumb/e/e6/Robinsons_Galleria_new_Logo.jpg/250px-Robinsons_Galleria_new_Logo.jpg">
+		<p> Nestled in one of the busiest districts in Metro, Robinsons Galleria is a popular hang-out of yuppies and students from around the area. And with a themed set-up of these stalls, you won't need to punish your legs just to find one item. Nevertheless, they have an assortment of products people need. Tired of shopping? Have a hearty dinner at TGI Fridays or Mangan. And if you love books, then the design, ambiance, and content of their "Bestseller Bookstore" is definitely the stop for you. Want to know the latest trends in fashion without flipping a magazine? Then their 50th Avenue is just the catwalk for you. In fact, most of the items in Philippine fashion magazines can be found there. Situated beside other great malls like Megamall ang Shangri-la, Robinsons Galleria truly is a mall to visit.</p> 
+		<a href"robinsonsgalleria.html"> see more </a> 
+	</div>
 	
-	<div class="col-md-6 col-xs-12"> <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRP_WFv0qBil_zIZTbKigLNSK-TMpVbVusunopujpvDVbufBtUM"> <p> inrot intwh fjw finaldv eogmlvn </p> <a href="northedsa.html"> see more </a> </div>
+	<div class="col-md-5 col-md-offset-2 col-xs-12 text-align: center"> 
+		<img src="http://img4.wikia.nocookie.net/__cb20110528200852/gatewaycomputers/images/5/52/Gateway_logo.jpg">
+		<p>Like the garden situated on its heart, the Gateway Mall is an oasis amidst Cubao's chaotic environ. It is named as such since it is strategically installed at the junction of the MRT and LRT2, making it very accessible to any commuter. Gateway features shops of famous brands from Marks and Spencer to Lacoste, from Nike to Hush Puppies. An open garden-restaurant is set in its center, giving diners a breezy outdoor feel, and the surrounding restaurants complete the mood with their wide array of specialties. Gateway also has great movie houses, including the Platinum Cinema – a movie theater with Lazy Boys for seats. And as it continues to receive praise from patrons and newcomers alike, its name firmly reinstates Cubao as a perpetual business zone. Gateway could have placed even higher on our list but its short list affordable food and retail choices came in as a factor. Nonetheless it is one of the best malls in the country, and truly a Gateway for all.</p> 
+		<a href"Gateway.html"> see more </a> 
+	</div>
 	
-	<div class="col-md-6 col-xs-12"> <img src="http://4.bp.blogspot.com/-BSuYN1yfAt0/Te7s7oXLjZI/AAAAAAAAAxU/E_lvsS0Od0o/s1600/market_logo.jpg"> <p> furngwvnegj iejw e9r ntor intor itnr intro blah blah </p> <a href="market2.html"> see more </a> </div>
+	<div class="col-md-5 col-xs-12 text-align: center">
+		<img src="http://4.bp.blogspot.com/-QGNiU5hAgHU/TwCFzzHGuGI/AAAAAAAAC78/5u5lYuuYl_g/s1600/SM+Mega+logo.jpg">
+		<p>The SM Megamall is just the break the working folks of Ortigas need. The mall knows what attracts the crowds: a wealth of products, endless hang-outs, and even a skating rink. In addition to having a fantastic collection of stores, Megamall also provides shoppers entertainment, with its huge arcade and karaoke bars. And with 12 movie houses, you're sure to find something worth watching. Megamall boasts five floors and two wings of shops, stalls, and boutiques, definitely a shoppers paradise. When you and your friends get tired of shopping, you can always make your way to the skating rink and practice your inside axels. The extremely functional Megatrade Hall on its top floor also gives Megamall edge over the other malls in the city. And though the Mall of Asia is comparably the larger in area, it still competes with the mammoth in terms of patronship. The young and the old, the restless and the stressed-out - everyone has a place in SM Megamall.</p> 
+		<a href="smmegamall.html"> see more </a>
+	</div>
 	
-	<div class="col-md-6 col-xs-12"> <img src="http://upload.wikimedia.org/wikipedia/en/1/14/Glorietta_2007_Logo.jpg"> <p> intoordfnsnviiej igwva jp pejfwpf </p> <a href="glorieta.html"> see more </a> </div>
-	
-	
-	
+	<div class="col-md-5 col-md-offset-2 col-xs-12 text-align: center">
+		<img src="http://upload.wikimedia.org/wikipedia/en/0/0c/Trinoma_Logo.gif">
+		<p> The Triangle North of Manila, or simply Trinoma, is a breath of fresh air, as this up-and-coming Ayala mall provides customers a perfect escape from the bustling North Avenue and EDSA scene. Located just in front of SM North and right at the end of the Metro Rail Transit, Trinoma is envisioned to house more than 500 stores offering its clientèle merchandise of wide variety and fantastic rate. It was only opened to the public on May 16, 2007, but already, Trinoma is rising in the Filipino's list of 'places to go to'. It boasts fabulous architecture: multi-layered terraces, a reverse waterfall, and a luminous facade that changes color. It also houses one of the best movie theaters in the country. While already in the top 5 of our list, Trinoma is sure to climb up the rankings even more in the coming years - that's something everyone should look forward to.</p>
+		<a href="trinoma.html"> see more </a>
+		</div>
+	<!--source: wikipilipinas-->
+
+
 	
 	
 	</div>
