--- a/trinoma.html
+++ b/trinoma.html
@@ -47,6 +47,11 @@
 			<div class="col-md-4 text-center"><h4>Article 3</h4></div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-md-3">
+			<a href="critic.html">What do our critics have to say?</a>
+		</div>
+	</div>
 	</div>
 </body>
 </html>
