--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<li><a href="maps.html">Maps</a></li>
 					<li><a href="mall.html">Malls</a></li>
 					<li><a href="hohol.html">HOHOL spots</a></li>
-					<li><a href="reastuarants.html">Restaurants</a></li>
+					<li><a href="restaurants.html">Restaurants</a></li>
 					<li><a href="login.html">Log-in!</a></li>
 				</ul>
 			</div>
@@ -40,7 +40,7 @@
 			<div class="col-xs-4">
 				<h3>Trinoma</h3>
 				<p>This is a cool mall near PISAY so go here cause its cool...</p>
-				<a href="#">Keep reading...</a>
+				<a href="trinoma.html">Keep reading...</a>
 			</div>
 			<div class="col-xs-4">
 				<h3>SM North EDSA</h3>
@@ -57,8 +57,8 @@
 			<div class="col-xs-4" style="border: 1px solid black; border-radius: 7%;">
 				<h4>Navigations</h4>
 				<ul>
-					<li><a href="#">Forums</a></li>
-					<li><a href="#">Custom Places</a></li>
+					<li><a href="forum.html">Forums</a></li>
+					<li><a href="hohol.html">Custom Places</a></li>
 					<li><a href="#">Random Page :33</a></li>
 				</ul>
 			</div>
